force-app/main/default/objects/Tilewall_Field__c/Tilewall_Field__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Tilewall Field</label>
</CustomObject>