force-app/main/default/objects/Tilewall_Field__c/fields/actionVar1__c.field-meta.xml
<CustomField>
    <fullName>actionVar1__c</fullName>
    <inlineHelpText>(Optional) Variable value to pass into a Flow opened from an action. You must create a text variable named actionVar1 (case-sensitive) in the Flow, that is available for input from outside the flow.</inlineHelpText>
    <label>Action Variable 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>