force-app/main/default/objects/Tilewall_Field__c/fields/align__c.field-meta.xml
<CustomField>
    <fullName>align__c</fullName>
    <defaultValue>&apos;left&apos;</defaultValue>
    <inlineHelpText>Field Alignment. Options: left,center,right</inlineHelpText>
    <label>Alignment</label>
    <length>55</length>
    <type>Text</type>
</CustomField>