force-app/main/default/objects/Tilewall_Field__c/fields/apiName__c.field-meta.xml
<CustomField>
    <fullName>apiName__c</fullName>
    <label>API Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>