force-app/main/default/objects/Tilewall_Field__c/fields/badgeIcon__c.field-meta.xml
<CustomField>
    <fullName>badgeIcon__c</fullName>
    <inlineHelpText>(Optional) Select an icon - eg. standard:product, custom:alert - to display in the badge, to the left of the content</inlineHelpText>
    <label>Badge Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>