force-app/main/default/objects/Tilewall_Field__c/fields/badgeIconFieldname__c.field-meta.xml
<CustomField>
    <fullName>badgeIconFieldname__c</fullName>
    <label>Badge Icon Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>