force-app/main/default/objects/Tilewall_Field__c/fields/bgColor__c.field-meta.xml
<CustomField>
    <fullName>bgColor__c</fullName>
    <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
    <label>Background Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>