force-app/main/default/objects/Tilewall_Field__c/fields/bgColorFieldname__c.field-meta.xml
<CustomField>
    <fullName>bgColorFieldname__c</fullName>
    <label>Background Color Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>