force-app/main/default/objects/Tilewall_Field__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <label>Text Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>