force-app/main/default/objects/Tilewall_Field__c/fields/colorFieldname__c.field-meta.xml
<CustomField>
    <fullName>colorFieldname__c</fullName>
    <label>Text Color Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>