force-app/main/default/objects/Tilewall_Field__c/fields/Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Config_Id__c</fullName>
    <label>Config Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>