force-app/main/default/objects/Tilewall_Field__c/fields/flow__c.field-meta.xml
<CustomField>
    <fullName>flow__c</fullName>
    <inlineHelpText>For actions, name of the Flow to execute.</inlineHelpText>
    <label>Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>