force-app/main/default/objects/Tilewall_Field__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <inlineHelpText>Optional label for this field.  If omitted, the value will take up the full space.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>