force-app/main/default/objects/Tilewall_Field__c/fields/labelBgColorFieldname__c.field-meta.xml
<CustomField>
    <fullName>labelBgColorFieldname__c</fullName>
    <label>Label Background Color Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>