force-app/main/default/objects/Tilewall_Field__c/fields/labelColor__c.field-meta.xml
<CustomField>
    <fullName>labelColor__c</fullName>
    <label>Label Text Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>