force-app/main/default/objects/Tilewall_Field__c/fields/labelColorFieldname__c.field-meta.xml
<CustomField>
    <fullName>labelColorFieldname__c</fullName>
    <label>Label Text Color Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>