force-app/main/default/objects/Tilewall_Field__c/fields/showActionFieldname__c.field-meta.xml
<CustomField>
    <fullName>showActionFieldname__c</fullName>
    <inlineHelpText>Reference to a Boolean field (eg. Formula, Checkbox) that determines whether this action should be displayed on a tile or not.</inlineHelpText>
    <label>Show Action Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>