force-app/main/default/objects/Tilewall_Field__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <defaultValue>&apos;body_regular&apos;</defaultValue>
    <inlineHelpText>Text size style (google &apos;slds text&apos; for examples of each style). Options: body_regular,body_small,heading_large,heading_medium,heading_small</inlineHelpText>
    <label>Size</label>
    <length>55</length>
    <type>Text</type>
</CustomField>