force-app/main/default/objects/Tilewall_Field__c/fields/textCase__c.field-meta.xml
<CustomField>
    <fullName>textCase__c</fullName>
    <defaultValue>&apos;default&apos;</defaultValue>
    <inlineHelpText>Options:default,uppercase,lowercase</inlineHelpText>
    <label>Text Case</label>
    <length>55</length>
    <type>Text</type>
</CustomField>