force-app/main/default/objects/Tilewall_Field__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <inlineHelpText>Options:Field,Badge,Action</inlineHelpText>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>